@@ -1,37 +1,38 @@
 package org.jabref.gui.importer.actions;
 
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 
-import org.jabref.Globals;
-import org.jabref.gui.BasePanel;
-import org.jabref.gui.BasePanelPreferences;
 import org.jabref.gui.DialogService;
+import org.jabref.gui.Globals;
 import org.jabref.gui.JabRefFrame;
+import org.jabref.gui.LibraryTab;
+import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.SimpleCommand;
 import org.jabref.gui.dialogs.BackupUIManager;
-import org.jabref.gui.externalfiletype.ExternalFileTypes;
-import org.jabref.gui.importer.ParserResultWarningDialog;
+import org.jabref.gui.menus.FileHistoryMenu;
 import org.jabref.gui.shared.SharedDatabaseUIManager;
+import org.jabref.gui.theme.ThemeManager;
 import org.jabref.gui.util.BackgroundTask;
+import org.jabref.gui.util.DefaultTaskExecutor;
 import org.jabref.gui.util.FileDialogConfiguration;
 import org.jabref.logic.autosaveandbackup.BackupManager;
 import org.jabref.logic.importer.OpenDatabase;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.shared.DatabaseNotSupportedException;
 import org.jabref.logic.shared.exception.InvalidDBMSConnectionPropertiesException;
 import org.jabref.logic.shared.exception.NotASharedDatabaseException;
 import org.jabref.logic.util.StandardFileType;
-import org.jabref.model.database.shared.DatabaseNotSupportedException;
-import org.jabref.preferences.JabRefPreferences;
+import org.jabref.preferences.PreferencesService;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -39,10 +40,11 @@ import org.slf4j.LoggerFactory;
 // The action concerned with opening an existing database.
 public class OpenDatabaseAction extends SimpleCommand {
 
-    public static final Logger LOGGER = LoggerFactory.getLogger(OpenDatabaseAction.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(OpenDatabaseAction.class);
+
     // List of actions that may need to be called after opening the file. Such as
     // upgrade actions etc. that may depend on the JabRef version that wrote the file:
-    private static final List<GUIPostOpenAction> POST_OPEN_ACTIONS = Arrays.asList(
+    private static final List<GUIPostOpenAction> POST_OPEN_ACTIONS = List.of(
             // Migrations:
             // Warning for migrating the Review into the Comment field
             new MergeReviewIntoCommentAction(),
@@ -50,24 +52,34 @@ public class OpenDatabaseAction extends SimpleCommand {
             new CheckForNewEntryTypesAction());
 
     private final JabRefFrame frame;
+    private final PreferencesService preferencesService;
+    private final StateManager stateManager;
+    private final ThemeManager themeManager;
     private final DialogService dialogService;
 
-    public OpenDatabaseAction(JabRefFrame frame) {
+    public OpenDatabaseAction(JabRefFrame frame,
+                              PreferencesService preferencesService,
+                              DialogService dialogService,
+                              StateManager stateManager,
+                              ThemeManager themeManager) {
         this.frame = frame;
-        this.dialogService = frame.getDialogService();
+        this.preferencesService = preferencesService;
+        this.dialogService = dialogService;
+        this.stateManager = stateManager;
+        this.themeManager = themeManager;
     }
 
     /**
      * Go through the list of post open actions, and perform those that need to be performed.
      *
-     * @param panel  The BasePanel where the database is shown.
-     * @param result The result of the BIB file parse operation.
+     * @param libraryTab The BasePanel where the database is shown.
+     * @param result     The result of the BIB file parse operation.
      */
-    public static void performPostOpenActions(BasePanel panel, ParserResult result) {
+    public static void performPostOpenActions(LibraryTab libraryTab, ParserResult result) {
         for (GUIPostOpenAction action : OpenDatabaseAction.POST_OPEN_ACTIONS) {
             if (action.isActionNecessary(result)) {
-                action.performAction(panel, result);
-                panel.frame().showBasePanel(panel);
+                action.performAction(libraryTab, result);
+                libraryTab.frame().showLibraryTab(libraryTab);
             }
         }
     }
@@ -81,7 +93,7 @@ public class OpenDatabaseAction extends SimpleCommand {
                 .build();
 
         List<Path> filesToOpen = dialogService.showFileOpenDialogAndGetMultipleFiles(fileDialogConfiguration);
-        openFiles(filesToOpen, true);
+        openFiles(filesToOpen);
     }
 
     /**
@@ -89,29 +101,31 @@ public class OpenDatabaseAction extends SimpleCommand {
      */
     private Path getInitialDirectory() {
         if (frame.getBasePanelCount() == 0) {
-            return Globals.prefs.getWorkingDir();
+            return preferencesService.getFilePreferences().getWorkingDirectory();
         } else {
-            Optional<Path> databasePath = frame.getCurrentBasePanel().getBibDatabaseContext().getDatabasePath();
-            return databasePath.map(Path::getParent).orElse(Globals.prefs.getWorkingDir());
+            Optional<Path> databasePath = frame.getCurrentLibraryTab().getBibDatabaseContext().getDatabasePath();
+            return databasePath.map(Path::getParent).orElse(preferencesService.getFilePreferences().getWorkingDirectory());
         }
     }
 
     /**
-     * Opens the given file. If null or 404, nothing happens
+     * Opens the given file. If null or 404, nothing happens.
+     * In case the file is already opened, that panel is raised.
      *
      * @param file the file, may be null or not existing
      */
-    public void openFile(Path file, boolean raisePanel) {
-        openFiles(new ArrayList<>(List.of(file)), raisePanel);
+    public void openFile(Path file) {
+        openFiles(new ArrayList<>(List.of(file)));
     }
 
     /**
-     * Opens the given files. If one of it is null or 404, nothing happens
+     * Opens the given files. If one of it is null or 404, nothing happens.
+     * In case the file is already opened, that panel is raised.
      *
      * @param filesToOpen the filesToOpen, may be null or not existing
      */
-    public void openFiles(List<Path> filesToOpen, boolean raisePanel) {
-        BasePanel toRaise = null;
+    public void openFiles(List<Path> filesToOpen) {
+        LibraryTab toRaise = null;
         int initialCount = filesToOpen.size();
         int removed = 0;
 
@@ -119,17 +133,17 @@ public class OpenDatabaseAction extends SimpleCommand {
         for (Iterator<Path> iterator = filesToOpen.iterator(); iterator.hasNext(); ) {
             Path file = iterator.next();
             for (int i = 0; i < frame.getTabbedPane().getTabs().size(); i++) {
-                BasePanel basePanel = frame.getBasePanelAt(i);
-                if ((basePanel.getBibDatabaseContext().getDatabasePath().isPresent())
-                        && basePanel.getBibDatabaseContext().getDatabasePath().get().equals(file)) {
+                LibraryTab libraryTab = frame.getLibraryTabAt(i);
+                if ((libraryTab.getBibDatabaseContext().getDatabasePath().isPresent())
+                        && libraryTab.getBibDatabaseContext().getDatabasePath().get().equals(file)) {
                     iterator.remove();
                     removed++;
                     // See if we removed the final one. If so, we must perhaps
-                    // raise the BasePanel in question:
+                    // raise the LibraryTab in question:
                     if (removed == initialCount) {
-                        toRaise = basePanel;
+                        toRaise = libraryTab;
                     }
-                    // no more bps to check, we found a matching one
+                    // no more LibraryTabs to check, we found a matching one
                     break;
                 }
             }
@@ -138,77 +152,92 @@ public class OpenDatabaseAction extends SimpleCommand {
         // Run the actual open in a thread to prevent the program
         // locking until the file is loaded.
         if (!filesToOpen.isEmpty()) {
-            final List<Path> theFiles = Collections.unmodifiableList(filesToOpen);
-
-            for (Path theFile : theFiles) {
+            FileHistoryMenu fileHistory = frame.getFileHistory();
+            filesToOpen.forEach(theFile -> {
                 // This method will execute the concrete file opening and loading in a background thread
-                openTheFile(theFile, raisePanel);
-            }
-
-            for (Path theFile : theFiles) {
-                frame.getFileHistory().newFile(theFile);
-            }
+                openTheFile(theFile);
+                fileHistory.newFile(theFile);
+            });
         } else if (toRaise != null) {
             // If no files are remaining to open, this could mean that a file was
             // already open. If so, we may have to raise the correct tab:
-            frame.showBasePanel(toRaise);
+            frame.showLibraryTab(toRaise);
         }
     }
 
     /**
-     * @param file the file, may be null or not existing
+     * This is the real file opening. Should be called via {@link #openFile(Path)}
+     *
+     * @param file the file, may be NOT null, but may not be existing
      */
-    private void openTheFile(Path file, boolean raisePanel) {
+    private void openTheFile(Path file) {
         Objects.requireNonNull(file);
-        if (Files.exists(file)) {
-
-            BackgroundTask.wrap(() -> loadDatabase(file))
-                          .onSuccess(result -> {
-                              BasePanel panel = addNewDatabase(result, file, raisePanel);
-                              OpenDatabaseAction.performPostOpenActions(panel, result);
-                          })
-                          .onFailure(ex -> dialogService.showErrorDialogAndWait(Localization.lang("Connection error"),
-                                  ex.getMessage() + "\n\n" + Localization.lang("A local copy will be opened.")))
-                          .executeWith(Globals.TASK_EXECUTOR);
+        if (!Files.exists(file)) {
+            return;
         }
+
+        BackgroundTask<ParserResult> backgroundTask = BackgroundTask.wrap(() -> loadDatabase(file));
+        // The backgroundTask is executed within the method createLibraryTab
+        LibraryTab newTab = LibraryTab.createLibraryTab(backgroundTask, file, preferencesService, stateManager, frame, themeManager);
+        backgroundTask.onFinished(() -> trackOpenNewDatabase(newTab));
     }
 
+    /**
+     * This method is similar to {@link org.jabref.gui.JabRefGUI#openLastEditedDatabases()}.
+     * This method also has the capability to open remote shared databases
+     */
     private ParserResult loadDatabase(Path file) throws Exception {
         Path fileToLoad = file.toAbsolutePath();
 
         dialogService.notify(Localization.lang("Opening") + ": '" + file + "'");
 
-        Globals.prefs.put(JabRefPreferences.WORKING_DIRECTORY, fileToLoad.getParent().toString());
+        preferencesService.getFilePreferences().setWorkingDirectory(fileToLoad.getParent());
 
+        ParserResult parserResult = null;
         if (BackupManager.backupFileDiffers(fileToLoad)) {
-            BackupUIManager.showRestoreBackupDialog(dialogService, fileToLoad);
+            // In case the backup differs, ask the user what to do.
+            // In case the user opted for restoring a backup, the content of the backup is contained in parserResult.
+            parserResult = BackupUIManager.showRestoreBackupDialog(dialogService, fileToLoad, preferencesService).orElse(null);
         }
 
-        ParserResult result = OpenDatabase.loadDatabase(fileToLoad.toString(),
-                Globals.prefs.getImportFormatPreferences(), Globals.getFileUpdateMonitor());
+        try {
+            if (parserResult == null) {
+                // No backup was restored, do the "normal" loading
+                parserResult = OpenDatabase.loadDatabase(fileToLoad,
+                        preferencesService.getImportFormatPreferences(),
+                        Globals.getFileUpdateMonitor());
+            }
 
-        if (result.getDatabase().isShared()) {
+            if (parserResult.hasWarnings()) {
+                String content = Localization.lang("Please check your library file for wrong syntax.")
+                        + "\n\n" + parserResult.getErrorMessage();
+                DefaultTaskExecutor.runInJavaFXThread(() ->
+                        dialogService.showWarningDialogAndWait(Localization.lang("Open library error"), content));
+            }
+        } catch (IOException e) {
+            parserResult = ParserResult.fromError(e);
+            LOGGER.error("Error opening file '{}'", fileToLoad, e);
+        }
+
+        if (parserResult.getDatabase().isShared()) {
             try {
-                new SharedDatabaseUIManager(frame).openSharedDatabaseFromParserResult(result);
+                new SharedDatabaseUIManager(frame, preferencesService).openSharedDatabaseFromParserResult(parserResult);
             } catch (SQLException | DatabaseNotSupportedException | InvalidDBMSConnectionPropertiesException |
                     NotASharedDatabaseException e) {
-                result.getDatabaseContext().clearDatabaseFile(); // do not open the original file
-                result.getDatabase().clearSharedDatabaseID();
+                parserResult.getDatabaseContext().clearDatabasePath(); // do not open the original file
+                parserResult.getDatabase().clearSharedDatabaseID();
                 LOGGER.error("Connection error", e);
 
                 throw e;
             }
         }
-        return result;
+        return parserResult;
     }
 
-    private BasePanel addNewDatabase(ParserResult result, final Path file, boolean raisePanel) {
-        if (result.hasWarnings()) {
-            ParserResultWarningDialog.showParserResultWarningDialog(result, frame);
-        }
-
-        BasePanel basePanel = new BasePanel(frame, BasePanelPreferences.from(Globals.prefs), result.getDatabaseContext(), ExternalFileTypes.getInstance());
-        frame.addTab(basePanel, raisePanel);
-        return basePanel;
+    private void trackOpenNewDatabase(LibraryTab libraryTab) {
+        Globals.getTelemetryClient().ifPresent(client -> client.trackEvent(
+                "OpenNewDatabase",
+                Map.of(),
+                Map.of("NumberOfEntries", (double) libraryTab.getBibDatabaseContext().getDatabase().getEntryCount())));
     }
 }
