@@ -3,6 +3,7 @@ package org.jabref.logic.importer.fileformat;
 import java.io.IOException;
 import java.io.StringReader;
 import java.net.InetAddress;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -11,17 +12,23 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 
+import org.jabref.logic.citationkeypattern.AbstractCitationKeyPattern;
+import org.jabref.logic.citationkeypattern.DatabaseCitationKeyPattern;
+import org.jabref.logic.citationkeypattern.GlobalCitationKeyPattern;
+import org.jabref.logic.cleanup.FieldFormatterCleanup;
+import org.jabref.logic.cleanup.FieldFormatterCleanups;
 import org.jabref.logic.exporter.SavePreferences;
+import org.jabref.logic.formatter.bibtexfields.EscapeAmpersandsFormatter;
+import org.jabref.logic.formatter.bibtexfields.EscapeDollarSignFormatter;
+import org.jabref.logic.formatter.bibtexfields.EscapeUnderscoresFormatter;
+import org.jabref.logic.formatter.bibtexfields.LatexCleanupFormatter;
+import org.jabref.logic.formatter.bibtexfields.NormalizeMonthFormatter;
+import org.jabref.logic.formatter.bibtexfields.NormalizePagesFormatter;
 import org.jabref.logic.formatter.casechanger.LowerCaseFormatter;
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParseException;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.util.OS;
-import org.jabref.model.bibtexkeypattern.AbstractCitationKeyPattern;
-import org.jabref.model.bibtexkeypattern.DatabaseCitationKeyPattern;
-import org.jabref.model.bibtexkeypattern.GlobalCitationKeyPattern;
-import org.jabref.model.cleanup.FieldFormatterCleanup;
-import org.jabref.model.cleanup.FieldFormatterCleanups;
 import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryType;
@@ -29,6 +36,7 @@ import org.jabref.model.entry.BibtexString;
 import org.jabref.model.entry.Date;
 import org.jabref.model.entry.Month;
 import org.jabref.model.entry.field.BibField;
+import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.FieldPriority;
 import org.jabref.model.entry.field.InternalField;
 import org.jabref.model.entry.field.OrFields;
@@ -69,7 +77,7 @@ class BibtexParserTest {
     @BeforeEach
     void setUp() {
         importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
-        when(importFormatPreferences.getKeywordSeparator()).thenReturn(',');
+        when(importFormatPreferences.bibEntryPreferences().getKeywordSeparator()).thenReturn(',');
         parser = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor());
     }
 
@@ -87,10 +95,10 @@ class BibtexParserTest {
 
         BibEntry expected = new BibEntry();
         expected.setType(StandardEntryType.Article);
-        expected.setCiteKey("test");
+        expected.setCitationKey("test");
         expected.setField(StandardField.AUTHOR, "Ed von Test");
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
@@ -113,12 +121,15 @@ class BibtexParserTest {
     @Test
     void singleFromStringRecognizesEntry() throws ParseException {
         Optional<BibEntry> parsed = BibtexParser.singleFromString(
-                "@article{canh05," + "  author = {Crowston, K. and Annabi, H.},\n" + "  title = {Title A}}\n",
+                """
+                        @article{canh05,  author = {Crowston, K. and Annabi, H.},
+                          title = {Title A}}
+                        """,
                 importFormatPreferences, fileMonitor);
 
         BibEntry expected = new BibEntry();
         expected.setType(StandardEntryType.Article);
-        expected.setCiteKey("canh05");
+        expected.setCitationKey("canh05");
         expected.setField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.");
         expected.setField(StandardField.TITLE, "Title A");
 
@@ -127,13 +138,14 @@ class BibtexParserTest {
 
     @Test
     void singleFromStringRecognizesEntryInMultiple() throws ParseException {
-        Optional<BibEntry> parsed = BibtexParser.singleFromString(
-                "@article{canh05," + "  author = {Crowston, K. and Annabi, H.},\n" + "  title = {Title A}}\n"
-                        + "@inProceedings{foo," + "  author={Norton Bar}}",
+        Optional<BibEntry> parsed = BibtexParser.singleFromString("""
+                        @article{canh05, author = {Crowston, K. and Annabi, H.},
+                            title = {Title A}}
+                        @inProceedings{foo,  author={Norton Bar}}""",
                 importFormatPreferences, fileMonitor);
 
-        assertTrue(parsed.get().getCiteKeyOptional().equals(Optional.of("canh05"))
-                || parsed.get().getCiteKeyOptional().equals(Optional.of("foo")));
+        assertTrue(parsed.get().getCitationKey().equals(Optional.of("canh05"))
+                || parsed.get().getCitationKey().equals(Optional.of("foo")));
     }
 
     @Test
@@ -160,7 +172,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -175,7 +187,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -189,7 +201,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
     }
 
     @Test
@@ -202,7 +214,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -217,7 +229,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -232,7 +244,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -247,7 +259,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(new UnknownEntryType("unknown"), entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -262,7 +274,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(new UnknownEntryType("thisisalongstringtotestmaybeitistolongwhoknowsnotme"), entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -277,21 +289,24 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
 
     @Test
     void parseRecognizesEntryWithBigNumbers() throws IOException {
-        ParserResult result = parser.parse(new StringReader("@article{canh05," + "isbn = 1234567890123456789,\n"
-                + "isbn2 = {1234567890123456789},\n" + "small = 1234,\n" + "}"));
+        ParserResult result = parser.parse(new StringReader("""
+                @article{canh05,isbn = 1234567890123456789,
+                isbn2 = {1234567890123456789},
+                small = 1234,
+                }"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
         BibEntry entry = parsed.iterator().next();
 
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("canh05"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("canh05"), entry.getCitationKey());
         assertEquals(Optional.of("1234567890123456789"), entry.getField(StandardField.ISBN));
         assertEquals(Optional.of("1234567890123456789"), entry.getField(new UnknownField("isbn2")));
         assertEquals(Optional.of("1234"), entry.getField(new UnknownField("small")));
@@ -306,7 +321,7 @@ class BibtexParserTest {
         BibEntry entry = parsed.iterator().next();
 
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("te_st:with-special(characters)"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("te_st:with-special(characters)"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -321,7 +336,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -336,14 +351,14 @@ class BibtexParserTest {
         BibEntry expected = new BibEntry(StandardEntryType.Article).withField(InternalField.KEY_FIELD, "test")
                                                                    .withField(StandardField.AUTHOR, "Ed von T@st");
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
     void parseRecognizesEntryPrecedingComment() throws IOException {
         String comment = "@Comment{@article{myarticle,}" + OS.NEWLINE
-                + "@inproceedings{blabla, title={the proceedings of bl@bl@}; }" + OS.NEWLINE + "}";
-        String entryWithComment = comment + OS.NEWLINE + "@article{test,author={Ed von T@st}}";
+                + "@inproceedings{blabla, title={the proceedings of bl@bl@}; }" + OS.NEWLINE + "}" + OS.NEWLINE;
+        String entryWithComment = comment + "@article{test,author={Ed von T@st}}";
         BibEntry expected = new BibEntry(StandardEntryType.Article)
                 .withField(InternalField.KEY_FIELD, "test")
                 .withField(StandardField.AUTHOR, "Ed von T@st");
@@ -352,7 +367,7 @@ class BibtexParserTest {
         ParserResult result = parser.parse(new StringReader(entryWithComment));
         List<BibEntry> parsed = result.getDatabase().getEntries();
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
         assertEquals(expected.getUserComments(), parsed.get(0).getUserComments());
     }
 
@@ -361,20 +376,22 @@ class BibtexParserTest {
         List<BibEntry> expected = new ArrayList<>();
         BibEntry firstEntry = new BibEntry();
         firstEntry.setType(StandardEntryType.Article);
-        firstEntry.setCiteKey("canh05");
+        firstEntry.setCitationKey("canh05");
         firstEntry.setField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.");
         firstEntry.setField(StandardField.TITLE, "Title A");
         expected.add(firstEntry);
 
         BibEntry secondEntry = new BibEntry();
         secondEntry.setType(StandardEntryType.InProceedings);
-        secondEntry.setCiteKey("foo");
+        secondEntry.setCitationKey("foo");
         secondEntry.setField(StandardField.AUTHOR, "Norton Bar");
         expected.add(secondEntry);
 
         ParserResult result = parser.parse(
-                new StringReader("@article{canh05," + "  author = {Crowston, K. and Annabi, H.},\n"
-                        + "  title = {Title A}}\n" + "@inProceedings{foo," + "  author={Norton Bar}}"));
+                new StringReader("""
+                        @article{canh05,  author = {Crowston, K. and Annabi, H.},
+                          title = {Title A}}
+                        @inProceedings{foo,  author={Norton Bar}}"""));
         List<BibEntry> parsed = result.getDatabase().getEntries();
 
         assertEquals(expected, parsed);
@@ -390,7 +407,7 @@ class BibtexParserTest {
                 .parse(new StringReader(firstEntry + secondEntry));
 
         for (BibEntry entry : result.getDatabase().getEntries()) {
-            if (entry.getCiteKeyOptional().equals(Optional.of("canh05"))) {
+            if (entry.getCitationKey().equals(Optional.of("canh05"))) {
                 assertEquals(firstEntry, entry.getParsedSerialization());
             } else {
                 assertEquals(secondEntry, entry.getParsedSerialization());
@@ -403,12 +420,12 @@ class BibtexParserTest {
         List<BibEntry> expected = new ArrayList<>();
         BibEntry firstEntry = new BibEntry();
         firstEntry.setType(StandardEntryType.Article);
-        firstEntry.setCiteKey("canh05");
+        firstEntry.setCitationKey("canh05");
         expected.add(firstEntry);
 
         BibEntry secondEntry = new BibEntry();
         secondEntry.setType(StandardEntryType.InProceedings);
-        secondEntry.setCiteKey("foo");
+        secondEntry.setCitationKey("foo");
         expected.add(secondEntry);
 
         ParserResult result = parser
@@ -428,7 +445,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test and Second Author and Third Author"), entry.getField(StandardField.AUTHOR));
     }
@@ -443,7 +460,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test and Second Author and Third Author"), entry.getField(StandardField.EDITOR));
     }
@@ -458,20 +475,26 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Test, Second Keyword, Third Keyword"), entry.getField(StandardField.KEYWORDS));
     }
 
     @Test
     void parseRecognizesHeaderButIgnoresEncoding() throws IOException {
-        ParserResult result = parser.parse(new StringReader("This file was created with JabRef 2.1 beta 2." + "\n"
-                + "Encoding: Cp1252" + "\n" + "" + "\n" + "@INPROCEEDINGS{CroAnnHow05," + "\n"
-                + "  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.}," + "\n"
-                + "  title = {Effective work practices for floss development: A model and propositions}," + "\n"
-                + "  booktitle = {Hawaii International Conference On System Sciences (HICSS)}," + "\n"
-                + "  year = {2005}," + "\n" + "  owner = {oezbek}," + "\n" + "  timestamp = {2006.05.29}," + "\n"
-                + "  url = {http://james.howison.name/publications.html}" + "\n" + "}))"));
+        ParserResult result = parser.parse(new StringReader("""
+                This file was created with JabRef 2.1 beta 2.
+                Encoding: Cp1252
+
+                @INPROCEEDINGS{CroAnnHow05,
+                  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.},
+                  title = {Effective work practices for floss development: A model and propositions},
+                  booktitle = {Hawaii International Conference On System Sciences (HICSS)},
+                  year = {2005},
+                  owner = {oezbek},
+                  timestamp = {2006.05.29},
+                  url = {http://james.howison.name/publications.html}
+                }))"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
         BibEntry entry = parsed.iterator().next();
@@ -480,7 +503,7 @@ class BibtexParserTest {
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.InProceedings, entry.getType());
         assertEquals(8, entry.getFields().size());
-        assertEquals(Optional.of("CroAnnHow05"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("CroAnnHow05"), entry.getCitationKey());
         assertEquals(Optional.of("Crowston, K. and Annabi, H. and Howison, J. and Masango, C."), entry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("Effective work practices for floss development: A model and propositions"),
                 entry.getField(StandardField.TITLE));
@@ -495,12 +518,16 @@ class BibtexParserTest {
     @Test
     void parseRecognizesFormatedEntry() throws IOException {
         ParserResult result = parser.parse(
-                new StringReader("" + "@INPROCEEDINGS{CroAnnHow05," + "\n"
-                        + "  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.}," + "\n"
-                        + "  title = {Effective work practices for floss development: A model and propositions}," + "\n"
-                        + "  booktitle = {Hawaii International Conference On System Sciences (HICSS)}," + "\n"
-                        + "  year = {2005}," + "\n" + "  owner = {oezbek}," + "\n" + "  timestamp = {2006.05.29},"
-                        + "\n" + "  url = {http://james.howison.name/publications.html}" + "\n" + "}))"));
+                new StringReader("""
+                        @INPROCEEDINGS{CroAnnHow05,
+                          author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.},
+                          title = {Effective work practices for floss development: A model and propositions},
+                          booktitle = {Hawaii International Conference On System Sciences (HICSS)},
+                          year = {2005},
+                          owner = {oezbek},
+                          timestamp = {2006.05.29},
+                          url = {http://james.howison.name/publications.html}
+                        }))"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
         BibEntry entry = parsed.iterator().next();
@@ -508,7 +535,7 @@ class BibtexParserTest {
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.InProceedings, entry.getType());
         assertEquals(8, entry.getFields().size());
-        assertEquals(Optional.of("CroAnnHow05"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("CroAnnHow05"), entry.getCitationKey());
         assertEquals(Optional.of("Crowston, K. and Annabi, H. and Howison, J. and Masango, C."), entry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("Effective work practices for floss development: A model and propositions"),
                 entry.getField(StandardField.TITLE));
@@ -530,7 +557,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -545,7 +572,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("2005"), entry.getField(StandardField.YEAR));
     }
@@ -560,7 +587,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -575,7 +602,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("D:\\Documents\\literature\\Tansel-PRL2006.pdf"), entry.getField(StandardField.FILE));
     }
@@ -590,7 +617,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("1-4~#nov#"), entry.getField(StandardField.DATE));
     }
@@ -598,11 +625,15 @@ class BibtexParserTest {
     @Test
     void parseReturnsEmptyListIfNoEntryRecognized() throws IOException {
         ParserResult result = parser.parse(
-                new StringReader("  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.}," + "\n"
-                        + "  title = {Effective work practices for floss development: A model and propositions}," + "\n"
-                        + "  booktitle = {Hawaii International Conference On System Sciences (HICSS)}," + "\n"
-                        + "  year = {2005}," + "\n" + "  owner = {oezbek}," + "\n" + "  timestamp = {2006.05.29},"
-                        + "\n" + "  url = {http://james.howison.name/publications.html}" + "\n" + "}))"));
+                new StringReader("""
+                          author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.},
+                          title = {Effective work practices for floss development: A model and propositions},
+                          booktitle = {Hawaii International Conference On System Sciences (HICSS)},
+                          year = {2005},
+                          owner = {oezbek},
+                          timestamp = {2006.05.29},
+                          url = {http://james.howison.name/publications.html}
+                        }))"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
 
@@ -612,7 +643,10 @@ class BibtexParserTest {
     @Test
     void parseReturnsEmptyListIfNoEntryExistent() throws IOException {
         ParserResult result = parser
-                .parse(new StringReader("This was created with JabRef 2.1 beta 2." + "\n" + "Encoding: Cp1252" + "\n"));
+                .parse(new StringReader("""
+                        This was created with JabRef 2.1 beta 2.
+                        Encoding: Cp1252
+                        """));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
 
@@ -630,7 +664,7 @@ class BibtexParserTest {
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
 
         assertFalse(result.hasWarnings());
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
@@ -654,7 +688,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(Optional.of("escaped \\{ bracket"), entry.getField(StandardField.REVIEW));
         assertFalse(result.hasWarnings());
     }
@@ -669,7 +703,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(Optional.of("escaped \\} bracket"), entry.getField(StandardField.REVIEW));
         assertFalse(result.hasWarnings());
     }
@@ -736,7 +770,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("author @ good"), entry.getField(StandardField.AUTHOR));
     }
@@ -751,7 +785,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Test {Ed {von} Test}"), entry.getField(StandardField.AUTHOR));
     }
@@ -767,7 +801,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Test {\" Test}"), entry.getField(StandardField.AUTHOR));
     }
@@ -794,7 +828,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
         assertTrue(result.hasWarnings());
@@ -810,7 +844,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(3, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("8,"), entry.getField(StandardField.MONTH));
@@ -943,7 +977,7 @@ class BibtexParserTest {
         assertEquals("Bourdieu, Pierre", parsedString.getContent());
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Book, parsedEntry.getType());
-        assertEquals(Optional.of("bourdieu-2002-questions-sociologie"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("bourdieu-2002-questions-sociologie"), parsedEntry.getCitationKey());
         assertEquals(Optional.of("Paris"), parsedEntry.getField(StandardField.ADDRESS));
         assertEquals(Optional.of("#bourdieu#"), parsedEntry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("2707318256"), parsedEntry.getField(StandardField.ISBN));
@@ -987,7 +1021,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1002,7 +1036,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1025,7 +1059,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1040,7 +1074,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1095,8 +1129,8 @@ class BibtexParserTest {
 
     @Test
     void parsePreservesMultipleSpacesInNonWrappableField() throws IOException {
-        when(importFormatPreferences.getFieldContentFormatterPreferences().getNonWrappableFields())
-                .thenReturn(Collections.singletonList(StandardField.FILE));
+        when(importFormatPreferences.fieldContentFormatterPreferences().getNonWrappableFields())
+                .thenReturn(List.of(StandardField.FILE));
         BibtexParser parser = new BibtexParser(importFormatPreferences, fileMonitor);
         ParserResult result = parser
                 .parse(new StringReader("@article{canh05,file = {ups  sala}}"));
@@ -1124,7 +1158,7 @@ class BibtexParserTest {
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
-        assertEquals(Optional.of("ups " + OS.NEWLINE + "sala"), parsedEntry.getField(StandardField.ABSTRACT));
+        assertEquals(Optional.of("ups \nsala"), parsedEntry.getField(StandardField.ABSTRACT));
     }
 
     @Test
@@ -1138,12 +1172,12 @@ class BibtexParserTest {
         assertFalse(result.hasWarnings());
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(Optional.of("H'{e}lne Fiaux"), parsedEntry.getField(StandardField.AUTHOR));
     }
 
     /**
-     * Test for #669
+     * Test for <a href="https://github.com/JabRef/jabref/issues/669">#669</a>
      */
     @Test
     void parsePreambleAndEntryWithoutNewLine() throws IOException {
@@ -1157,7 +1191,7 @@ class BibtexParserTest {
         assertEquals(Optional.of("some text and \\latex"), result.getDatabase().getPreamble());
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(Optional.of("H'{e}lne Fiaux"), parsedEntry.getField(StandardField.AUTHOR));
     }
 
@@ -1196,7 +1230,7 @@ class BibtexParserTest {
     }
 
     @Test
-    void parseSavesNewlinesBeforeEntryInParsedSerialization() throws IOException {
+    void parseSavesAllButOneNewlinesBeforeEntryInParsedSerialization() throws IOException {
         String testEntry = "@article{test,author={Ed von Test}}";
         ParserResult result = parser
                 .parse(new StringReader(OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry));
@@ -1205,11 +1239,12 @@ class BibtexParserTest {
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
         assertEquals(1, parsedEntries.size());
-        assertEquals(OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry, parsedEntry.getParsedSerialization());
+        // The first newline is removed, because JabRef interprets that always as block separator
+        assertEquals(OS.NEWLINE + OS.NEWLINE + testEntry, parsedEntry.getParsedSerialization());
     }
 
     @Test
-    void parseRemovesEncodingLineInParsedSerialization() throws IOException {
+    void parseRemovesEncodingLineAndSeparatorInParsedSerialization() throws IOException {
         String testEntry = "@article{test,author={Ed von Test}}";
         ParserResult result = parser.parse(
                 new StringReader(SavePreferences.ENCODING_PREFIX + OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry));
@@ -1218,7 +1253,9 @@ class BibtexParserTest {
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
         assertEquals(1, parsedEntries.size());
-        assertEquals(OS.NEWLINE + OS.NEWLINE + testEntry, parsedEntry.getParsedSerialization());
+        // First two newlines are removed because of removal of "Encoding"
+        // Third newline removed because of block functionality
+        assertEquals(testEntry, parsedEntry.getParsedSerialization());
     }
 
     @Test
@@ -1233,7 +1270,7 @@ class BibtexParserTest {
         BibEntry first = iterator.next();
         BibEntry second = iterator.next();
         // Sort them because we can't be sure about the order
-        if (first.getCiteKeyOptional().equals(Optional.of("test2"))) {
+        if (first.getCitationKey().equals(Optional.of("test2"))) {
             BibEntry tmp = first;
             first = second;
             second = tmp;
@@ -1241,7 +1278,8 @@ class BibtexParserTest {
 
         assertEquals(2, parsedEntries.size());
         assertEquals(testEntryOne + OS.NEWLINE, first.getParsedSerialization());
-        assertEquals(OS.NEWLINE + OS.NEWLINE + testEntryTwo, second.getParsedSerialization());
+        // one newline is removed, because it is written by JabRef's block functionality
+        assertEquals(OS.NEWLINE + testEntryTwo, second.getParsedSerialization());
     }
 
     @Test
@@ -1282,20 +1320,93 @@ class BibtexParserTest {
     @Test
     void parseRecognizesSaveActionsAfterEntry() throws IOException {
         ParserResult parserResult = parser.parse(
+                new StringReader("""
+                        @InProceedings{6055279,
+                          Title                    = {Educational session 1},
+                          Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},
+                          Year                     = {2011},
+                          Month                    = {Sept},
+                          Pages                    = {1-7},
+                          Abstract                 = {Start of the above-titled section of the conference proceedings record.},
+                          DOI                      = {10.1109/CICC.2011.6055279},
+                          ISSN                     = {0886-5930}
+                        }
+
+                        @comment{jabref-meta: saveActions:enabled;title[lower_case]}"""));
+
+        FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
+
+        assertTrue(saveActions.isEnabled());
+        assertEquals(List.of(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
+                saveActions.getConfiguredActions());
+    }
+
+    @Test
+    void parserKeepsSaveActions() throws IOException {
+        ParserResult parserResult = parser.parse(
+                new StringReader("""
+                        @InProceedings{6055279,
+                          Title                    = {Educational session 1},
+                          Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},
+                          Year                     = {2011},
+                          Month                    = {Sept},
+                          Pages                    = {1-7},
+                          Abstract                 = {Start of the above-titled section of the conference proceedings record.},
+                          DOI                      = {10.1109/CICC.2011.6055279},
+                          ISSN                     = {0886-5930}
+                        }
+
+                        @Comment{jabref-meta: saveActions:enabled;
+                        month[normalize_month]
+                        pages[normalize_page_numbers]
+                        title[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        booktitle[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        publisher[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        journal[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        abstract[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        ;}
+                        """));
+
+        FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
+
+        assertTrue(saveActions.isEnabled());
+
+        List<FieldFormatterCleanup> expected = new ArrayList<>(30);
+        expected.add(new FieldFormatterCleanup(StandardField.MONTH, new NormalizeMonthFormatter()));
+        expected.add(new FieldFormatterCleanup(StandardField.PAGES, new NormalizePagesFormatter()));
+        for (Field field : List.of(StandardField.TITLE, StandardField.BOOKTITLE, StandardField.PUBLISHER, StandardField.JOURNAL, StandardField.ABSTRACT)) {
+            expected.add(new FieldFormatterCleanup(field, new EscapeAmpersandsFormatter()));
+            expected.add(new FieldFormatterCleanup(field, new EscapeDollarSignFormatter()));
+            expected.add(new FieldFormatterCleanup(field, new EscapeUnderscoresFormatter()));
+            expected.add(new FieldFormatterCleanup(field, new LatexCleanupFormatter()));
+        }
+        assertEquals(expected, saveActions.getConfiguredActions());
+    }
+
+    @Test
+    void parseRecognizesCRLFLineBreak() throws IOException {
+        ParserResult result = parser.parse(
+                new StringReader("@InProceedings{6055279,\r\n" + "  Title                    = {Educational session 1},\r\n"
+                        + "  Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},\r\n"
+                        + "  Year                     = {2011},\r\n" + "  Month                    = {Sept},\r\n"
+                        + "  Pages                    = {1-7},\r\n"
+                        + "  Abstract                 = {Start of the above-titled section of the conference proceedings record.},\r\n"
+                        + "  DOI                      = {10.1109/CICC.2011.6055279},\r\n"
+                        + "  ISSN                     = {0886-5930}\r\n" + "}\r\n"));
+        assertEquals("\r\n", result.getDatabase().getNewLineSeparator());
+    }
+
+    @Test
+    void parseRecognizesLFLineBreak() throws IOException {
+        ParserResult result = parser.parse(
                 new StringReader("@InProceedings{6055279,\n" + "  Title                    = {Educational session 1},\n"
                         + "  Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},\n"
                         + "  Year                     = {2011},\n" + "  Month                    = {Sept},\n"
                         + "  Pages                    = {1-7},\n"
                         + "  Abstract                 = {Start of the above-titled section of the conference proceedings record.},\n"
                         + "  DOI                      = {10.1109/CICC.2011.6055279},\n"
-                        + "  ISSN                     = {0886-5930}\n" + "}\n" + "\n"
-                        + "@comment{jabref-meta: saveActions:enabled;title[lower_case]}"));
-
-        FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
-
-        assertTrue(saveActions.isEnabled());
-        assertEquals(Collections.singletonList(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
-                saveActions.getConfiguredActions());
+                        + "  ISSN                     = {0886-5930}\n" + "}\n"));
+        assertEquals("\n", result.getDatabase().getNewLineSeparator());
     }
 
     @Test
@@ -1306,7 +1417,7 @@ class BibtexParserTest {
         FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
 
         assertTrue(saveActions.isEnabled());
-        assertEquals(Collections.singletonList(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
+        assertEquals(List.of(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
                 saveActions.getConfiguredActions());
     }
 
@@ -1338,8 +1449,10 @@ class BibtexParserTest {
 
         Optional<SaveOrderConfig> saveOrderConfig = result.getMetaData().getSaveOrderConfig();
 
-        assertEquals(new SaveOrderConfig(false, true, new SaveOrderConfig.SortCriterion(StandardField.AUTHOR, false),
-                        new SaveOrderConfig.SortCriterion(StandardField.YEAR, true), new SaveOrderConfig.SortCriterion(StandardField.ABSTRACT, false)),
+        assertEquals(new SaveOrderConfig(SaveOrderConfig.OrderType.SPECIFIED, List.of(
+                new SaveOrderConfig.SortCriterion(StandardField.AUTHOR, false),
+                new SaveOrderConfig.SortCriterion(StandardField.YEAR, true),
+                new SaveOrderConfig.SortCriterion(StandardField.ABSTRACT, false))),
                 saveOrderConfig.get());
     }
 
@@ -1370,11 +1483,13 @@ class BibtexParserTest {
 
     @Test
     void integrationTestGroupTree() throws IOException, ParseException {
-        ParserResult result = parser.parse(new StringReader("@comment{jabref-meta: groupsversion:3;}" + OS.NEWLINE
-                + "@comment{jabref-meta: groupstree:" + OS.NEWLINE + "0 AllEntriesGroup:;" + OS.NEWLINE
-                + "1 KeywordGroup:Fréchet\\;0\\;keywords\\;FrechetSpace\\;0\\;1\\;;" + OS.NEWLINE
-                + "1 KeywordGroup:Invariant theory\\;0\\;keywords\\;GIT\\;0\\;0\\;;" + OS.NEWLINE
-                + "1 ExplicitGroup:TestGroup\\;0\\;Key1\\;Key2\\;;" + "}"));
+        ParserResult result = parser.parse(new StringReader("""
+                @comment{jabref-meta: groupsversion:3;}
+                @comment{jabref-meta: groupstree:
+                0 AllEntriesGroup:;
+                1 KeywordGroup:Fréchet\\;0\\;keywords\\;FrechetSpace\\;0\\;1\\;;
+                1 KeywordGroup:Invariant theory\\;0\\;keywords\\;GIT\\;0\\;0\\;;
+                1 ExplicitGroup:TestGroup\\;0\\;Key1\\;Key2\\;;}"""));
 
         GroupTreeNode root = result.getMetaData().getGroups().get();
 
@@ -1414,8 +1529,8 @@ class BibtexParserTest {
 
         GroupTreeNode root = result.getMetaData().getGroups().get();
 
-        assertEquals("src/test/resources/org/jabref/model/groups/paper.aux",
-                ((TexGroup) root.getChildren().get(0).getGroup()).getFilePath().toString());
+        assertEquals(((TexGroup) root.getChildren().get(0).getGroup()).getFilePath(),
+                Path.of("src/test/resources/org/jabref/model/groups/paper.aux"));
     }
 
     @Test
@@ -1442,32 +1557,34 @@ class BibtexParserTest {
 
     @Test
     void parseReallyUnknownType() throws Exception {
-        String bibtexEntry = "@ReallyUnknownType{test," + OS.NEWLINE +
-                " Comment                  = {testentry}" + OS.NEWLINE +
-                "}";
+        String bibtexEntry = """
+                @ReallyUnknownType{test,
+                 Comment                  = {testentry}
+                }""";
 
         Collection<BibEntry> entries = parser.parseEntries(bibtexEntry);
         BibEntry expectedEntry = new BibEntry();
         expectedEntry.setType(new UnknownEntryType("Reallyunknowntype"));
-        expectedEntry.setCiteKey("test");
+        expectedEntry.setCitationKey("test");
         expectedEntry.setField(StandardField.COMMENT, "testentry");
 
-        assertEquals(Collections.singletonList(expectedEntry), entries);
+        assertEquals(List.of(expectedEntry), entries);
     }
 
     @Test
     void parseOtherTypeTest() throws Exception {
-        String bibtexEntry = "@Other{test," + OS.NEWLINE +
-                " Comment                  = {testentry}" + OS.NEWLINE +
-                "}";
+        String bibtexEntry = """
+                @Other{test,
+                 Comment                  = {testentry}
+                }""";
 
         Collection<BibEntry> entries = parser.parseEntries(bibtexEntry);
         BibEntry expectedEntry = new BibEntry();
         expectedEntry.setType(new UnknownEntryType("Other"));
-        expectedEntry.setCiteKey("test");
+        expectedEntry.setCitationKey("test");
         expectedEntry.setField(StandardField.COMMENT, "testentry");
 
-        assertEquals(Collections.singletonList(expectedEntry), entries);
+        assertEquals(List.of(expectedEntry), entries);
     }
 
     @Test
@@ -1515,36 +1632,38 @@ class BibtexParserTest {
         List<BibEntry> expected = new ArrayList<>();
         BibEntry first = new BibEntry();
         first.setType(StandardEntryType.Article);
-        first.setCiteKey("a");
+        first.setCitationKey("a");
         expected.add(first);
 
         BibEntry second = new BibEntry();
         second.setType(StandardEntryType.Article);
-        second.setCiteKey("b");
+        second.setCitationKey("b");
         expected.add(second);
 
         BibEntry third = new BibEntry();
         third.setType(StandardEntryType.InProceedings);
-        third.setCiteKey("c");
+        third.setCitationKey("c");
         expected.add(third);
 
         ParserResult result = parser
-                .parse(new StringReader("@article{a}" + OS.NEWLINE + "@article{b}" + OS.NEWLINE + "@inProceedings{c}"));
+                .parse(new StringReader("""
+                        @article{a}
+                        @article{b}
+                        @inProceedings{c}"""));
 
         assertEquals(expected, result.getDatabase().getEntries());
     }
 
     @Test
     void parsePrecedingComment() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "% Some random comment that should stay here" + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                % Some random comment that should stay here
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         // read in bibtex string
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
@@ -1552,7 +1671,7 @@ class BibtexParserTest {
         BibEntry entry = entries.iterator().next();
 
         assertEquals(1, entries.size());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(5, entry.getFields().size());
         assertTrue(entry.getFields().contains(StandardField.AUTHOR));
         assertEquals(Optional.of("Foo Bar"), entry.getField(StandardField.AUTHOR));
@@ -1561,14 +1680,13 @@ class BibtexParserTest {
 
     @Test
     void parseCommentAndEntryInOneLine() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "Some random comment that should stay here @Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                Some random comment that should stay here @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         // read in bibtex string
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
@@ -1576,7 +1694,7 @@ class BibtexParserTest {
         BibEntry entry = entries.iterator().next();
 
         assertEquals(1, entries.size());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(5, entry.getFields().size());
         assertTrue(entry.getFields().contains(StandardField.AUTHOR));
         assertEquals(Optional.of("Foo Bar"), entry.getField(StandardField.AUTHOR));
@@ -1587,13 +1705,13 @@ class BibtexParserTest {
     void preserveEncodingPrefixInsideEntry() throws ParseException {
         BibEntry expected = new BibEntry();
         expected.setType(StandardEntryType.Article);
-        expected.setCiteKey("test");
+        expected.setCitationKey("test");
         expected.setField(StandardField.AUTHOR, SavePreferences.ENCODING_PREFIX);
 
         List<BibEntry> parsed = parser
                 .parseEntries("@article{test,author={" + SavePreferences.ENCODING_PREFIX + "}}");
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
@@ -1607,15 +1725,14 @@ class BibtexParserTest {
 
     @Test
     void parseRegularCommentBeforeEntry() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment{someComment} " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment{someComment}
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1635,15 +1752,14 @@ class BibtexParserTest {
 
     @Test
     void parseCommentWithoutBracketsBeforeEntry() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment someComment  " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment someComment
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1654,17 +1770,16 @@ class BibtexParserTest {
 
     @Test
     void parseCommentContainingEntries() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment{@article{myarticle,}" + OS.NEWLINE +
-                "@inproceedings{blabla, title={the proceedings of blabla}; }" + OS.NEWLINE +
-                "} " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment{@article{myarticle,}
+                @inproceedings{blabla, title={the proceedings of blabla}; }
+                }
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1675,17 +1790,16 @@ class BibtexParserTest {
 
     @Test
     void parseCommentContainingEntriesAndAtSymbols() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment{@article{myarticle,}" + OS.NEWLINE +
-                "@inproceedings{blabla, title={the proceedings of bl@bl@}; }" + OS.NEWLINE +
-                "} " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo@Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment{@article{myarticle,}
+                @inproceedings{blabla, title={the proceedings of bl@bl@}; }
+                }
+                @Article{test,
+                  Author                   = {Foo@Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1741,7 +1855,7 @@ class BibtexParserTest {
                         "@Misc{m1, author = kopp # et # kubovy }");
 
         BibEntry expectedEntry = new BibEntry(StandardEntryType.Misc)
-                .withCiteKey("m1")
+                .withCitationKey("m1")
                 .withField(StandardField.AUTHOR, "#kopp##et##kubovy#");
 
         assertEquals(List.of(expectedEntry), parsed);
@@ -1757,7 +1871,7 @@ class BibtexParserTest {
                         "@Misc{m2, author = kopp # \" and \" # kubovy }");
 
         BibEntry expectedEntry = new BibEntry(StandardEntryType.Misc)
-                .withCiteKey("m2")
+                .withCitationKey("m2")
                 .withField(StandardField.AUTHOR, "#kopp# and #kubovy#");
 
         assertEquals(List.of(expectedEntry), parsed);
@@ -1808,5 +1922,40 @@ class BibtexParserTest {
         Optional<BibEntry> result = parser.parseSingleEntry("@Misc{m, month = apr }");
 
         assertEquals(Optional.of("#apr#"), result.get().getField(StandardField.MONTH));
+    }
+
+    @Test
+    void parseDuplicateKeywordsWithOnlyOneEntry() throws ParseException {
+        Optional<BibEntry> result = parser.parseSingleEntry("@Article{,\n"
+            + "Keywords={asdf,asdf,asdf},\n"
+            + "}\n"
+            + "");
+
+        BibEntry expectedEntry = new BibEntry(StandardEntryType.Article)
+            .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
+
+        assertEquals(Optional.of(expectedEntry), result);
+    }
+
+    @Test
+    void parseDuplicateKeywordsWithTwoEntries() throws Exception {
+        BibEntry expectedEntryFirst = new BibEntry(StandardEntryType.Article)
+            .withField(StandardField.KEYWORDS, "bbb")
+            .withCitationKey("Test2017");
+
+        BibEntry expectedEntrySecond = new BibEntry(StandardEntryType.Article)
+            .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
+
+        String entries = """
+            @Article{Test2017,
+              keywords = {bbb},
+            }
+
+            @Article{,
+              keywords = {asdf,asdf,asdf},
+            },
+            """;
+        ParserResult result = parser.parse(new StringReader(entries));
+        assertEquals(List.of(expectedEntryFirst, expectedEntrySecond), result.getDatabase().getEntries());
     }
 }
